--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 
-version = '1.0'
+version = '1.1'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -22,7 +22,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes "Main-Class": "be.looorent.flexmonster.CompressionService"
+        attributes "Main-Class": "be.looorent.flexmonster.CLI"
     }
 
     from {
